[gd_scene load_steps=6 format=1]

[ext_resource path="res://Graphics/Pieces/Pawn.png" type="Texture" id=1]
[ext_resource path="res://Piece.gd" type="Script" id=2]
[ext_resource path="res://Audio/Move.wav" type="Sample" id=3]
[ext_resource path="res://Graphics/Pieces/PawnHighlight.png" type="Texture" id=4]

[sub_resource type="SampleLibrary" id=1]

samples/Move = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 3 )
}

[node name="Piece" type="TextureButton"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 256.0
margin/bottom = 256.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 1 )
params/resize_mode = 1
params/stretch_mode = 1
params/modulate = Color( 0, 0, 0, 1 )
script/script = ExtResource( 2 )

[node name="SoundEffect" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Highlight" type="TextureFrame" parent="."]

visibility/visible = false
visibility/behind_parent = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 4 )
stretch_mode = 0

[connection signal="button_down" from="." to="." method="_on_Piece_button_down"]

[connection signal="mouse_enter" from="." to="." method="_on_Piece_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_Piece_mouse_exit"]


